grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  labels:
    name: grafana-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.haltechcorp.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana
            port: 
              number: 80
