prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus
  labels:
    name: prometheus-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.haltechcorp.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-server
            port: 
              number: 80
